# cocoa-hep

./: .gitignore  CITATION.cff  Dockerfile  DockerfileBase  README.md  setup_cvmfs.sh  setup_cvmfs_hepmc3.sh
.github/: pull_request_template.md
.github/workflows/: detector_response.yml  docker.yml  docker_base.yml  geo_check.yml
COCOA/: CMakeLists.txt  COCOAMain.cc  LinkDef.h  examples.ipynb
COCOA/cmake/Modules/: FindFastJet.cmake  FindHepMC.cmake  FindHepMC2.cmake  FindJsonCpp.cmake  FindPythia8.cmake
COCOA/config/: config_Wlep.json  config_check_geo.json  config_cms.json  config_default.json  config_geantino_scan.json  config_hadron_test.json
COCOA/include/: CSVReader.hh  Cells_data.hh  Config_reader_var.hh  DetectorConstruction.hh  DetectorGeometryDefinitions.hh  Detector_analysis_var.hh  EventAction.hh  GraphConstructor.hh  Graph_construction_data.hh  HepMCG4AsciiReader.hh  HepMCG4AsciiReaderMessenger.hh  HepMCG4Interface.hh  HepMCG4Pythia8Interface.hh  HepMCG4Pythia8Messenger.hh  HepMCG4Reader.hh  HepMCG4ReaderMessenger.hh  Jet_Builder_data.hh  Jet_Builder_func.hh  OutputRunAction.hh  PrimaryGeneratorAction.hh  ReduceResolution.hh  Topo_clust_func.hh  TrackingAction.hh  Tracking_func.hh  TruthRecordGraph.hh
COCOA/macro/HepMC/: hepmc_test.in  hepmc_test.in~
COCOA/macro/Pythia8/: Photon_monochromatic_isotropic.in  ttbar.in
COCOA/pflow_configuration/: pflow_mean_template.csv  pflow_mean_template_noID.csv  pflow_std_template_noID.csv
COCOA/phoenix/event/: dump_phoenix_eventdata.py
COCOA/src/: CSVReader.cc  Cells_data.cc  Config_reader_func.cc  Config_reader_var.cc  DetectorConstruction.cc  Detector_analysis_var.cc  EventAction.cc  GraphConstructor.cc  HepMCG4AsciiReader.cc  HepMCG4AsciiReaderMessenger.cc  HepMCG4Interface.cc  HepMCG4Pythia8Interface.cc  HepMCG4Pythia8Messenger.cc  HepMCG4Reader.cc  HepMCG4ReaderMessenger.cc  InnerConstruction.cc  Jet_Builder_data.cc  Jet_Builder_func.cc  OutputRunAction.cc  Particle_flow_data.cc  PrimaryGeneratorAction.cc  PrimaryGeneratorMessenger.cc  RunTest.cc  SteppingAction.cc  Superclustering.cc  Superclustering_data.cc  Topo_clust_var.cc  Track_var.cc  TrackingAction.cc  Tracking_func.cc  Tracks_data.cc  TruthRecordGraph.cc
COCOA/tracking_configuration/: pflow_std_template.csv  phi_resolution.csv  qp_resolution.csv  reconstruction_efficiency.csv
COSA/: CMakeLists.txt  copyTree.C
COSA/config/: config_el.json  config_geantino_scan.json  config_hadron_test.json  config_local.json  config_ph.json  config_piZero_test.json
COSA/include/: CSVReader.hh  CalorimeterConstruction.hh  Cells_data.hh  Config_reader_var.hh  Debug_Particle_Flow_data.hh  Debug_Particle_Flow_func.hh  DetectorGeometryDefinitions.hh  GraphConstructor.hh  HepMCG4Pythia8Messenger.hh  Jet_Builder_func.hh  OutputRunAction.hh  Particle_flow_func.hh  RunTest.hh  Tracks_data.hh
COSA/macro/Pythia8/: Electron_gun.in  K0long_gun.in  Muon_gun.in  Neutron_gun.in  Photon_gun.in  Pion_gun.in  ttbar.in
COSA/src/: Cells_data.cc  Config_reader_func.cc  Debug_Particle_Flow_data.cc  Debug_Particle_Flow_func.cc  DetectorConstruction.cc  EventAction.cc  HepMCG4Pythia8Interface.cc  Jet_Builder_data.cc  Jet_Builder_func.cc  Particle_flow_data.cc  RunTest.cc  Topo_clust_func.cc  Track_var.cc  Tracking_func.cc  TruthRecordGraph.cc
COSA/tracking_configuration/: theta_resolution.csv
SCD/: CMakeLists.txt  SCDMain.cc
SCD/cmake/Modules/: FindFastJet.cmake  FindPythia8.cmake
SCD/config/: config_Wlep.json  config_check_geo.json  config_default.json  config_geantino_scan.json  config_hadron_test.json  config_piZero_test.json
SCD/include/: Cell_var.hh  Cells_data.hh  Config_reader_func.hh  Config_reader_var.hh  DetectorGeometryDefinitions.hh  EventAction.hh  Full_trajectory_info_data.hh  HepMCG4Pythia8Interface.hh  InnerConstruction.hh  OutputRunAction.hh  Particle_flow_data.hh  Particle_flow_var.hh  Pion_for_pflow_var.hh  PrimaryGeneratorAction.hh  PrimaryGeneratorMessenger.hh  SteppingAction.hh  Supercluster.hh  Superclustering.hh  Superclustering_data.hh  Topo_clust_var.hh  Topo_clusts_data.hh  Track_var.hh  Tracks_data.hh
SCD/macro/Geant4Gun/: geantino_scan.in
SCD/macro/Pythia8/: ChargedPion_monochromatic_isotropic.in  PiZero_monochromatic_isotropic.in  W.in  ttbar.in
SCD/phoenix/event/: dump_cell_vertex_lookup.py  dump_phoenix_eventdata.py
SCD/src/: CalorimeterConstruction.cc  Cell_var.cc  Cells_data.cc  Config_reader_func.cc  Config_reader_var.cc  EventAction.cc  Full_trajectory_info_data.cc  GraphConstructor.cc  Graph_construction_data.cc  HepMCG4Interface.cc  HepMCG4Pythia8Interface.cc  InnerConstruction.cc  OutputRunAction.cc  Particle_flow_func.cc  Particle_flow_var.cc  Pion_for_pflow_var.cc  PrimaryGeneratorAction.cc  PrimaryGeneratorMessenger.cc  ReduceResolution.cc  RunTest.cc  SteppingAction.cc  Supercluster.cc  Superclustering.cc  Superclustering_data.cc  Topo_clust_var.cc  Topo_clusts_data.cc  Track_var.cc  TrackingAction.cc  Tracking_func.cc  Tracks_data.cc  TruthRecordGraph.cc
SCD/tracking_configuration/: d0_resolution.csv  z0_resolution.csv
SCD/util/: dump_hdf5.py
docs/: README.rst  index.rst
docs/intro/: event_display.rst  eventdisplay.rst  installation.rst  introduction.rst  output_description.rst
